Updated code with new changes

--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid" id="navbar">
-      <div class="container-fluid">
+      <div class="container-fluid d-flex flex-row">
         <a class="navbar-brand" href="#">
-          <img src="assets/Logo/Favicon.PNG" alt="" class="col-lg-2 col-2" /> <!-- Replace with actual logo path -->
+          <img src="assets/Logo/Favicon.PNG" alt="Logo" class="col-lg-2 col-2" /> <!-- Replace with actual logo path -->
         </a>
-        <button class="btn d-lg-none navbar-expand-lg" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+        <button class="btn d-lg-none navbar-expand-lg float-en" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
           <i class="fa-solid fa-bars text-dark"></i>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mt-2 mb-lg-0 ">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
@@ -174,10 +174,10 @@
       </div>
       <!-- INFO CANVAS -->
 <!-- OFFCANVAS -->
-<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+<div class="offcanvas ofc1 offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
   <div class="offcanvas-header">
     <h5 id="offcanvasRightLabel">
-      <img src="/assets/logo.png" alt="" class="col-lg-5 col-5" /> <!-- Replace with actual logo path -->
+      <img src="/assets/Logo/Favicon.PNG" alt="" class="col-lg-2 col-2" /> <!-- Replace with actual logo path -->
     </h5>
     <!-- <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button> -->
   </div>
@@ -280,7 +280,7 @@
 </div>
 <!-- OFFCANVAS -->
  <!-- HOME START -->
-  <div class="container-fluid d-flex flex-column justify-content-center align-items-center h100">
+  <div class="container-fluid d-flex flex-column justify-content-center align-items-center h100 my-5">
 <div class="col-12 mx-auto d-flex justify-content-center flex-column ">
    <div class="d-flex col-12 flex-row justify-content-center">
     <p class="pe-5">Hey There! We are <svg xmlns="http://www.w3.org/2000/svg" width="50" class="arr" height="6" viewBox="0 0 50 6">
@@ -295,7 +295,7 @@
     </svg></span>
 </div>
 
-<h2 class="display-2 text-center ">INTELLIGENT & CYBER SECURE <span class="fw-bolder">SOLUTIONS</span>.</h2>
+<h2 class="display-2 text-center head-1 col-12">INTELLIGENT & CYBER SECURE <span class="fw-bolder">SOLUTIONS</span>.</h2>
 </div>
 <div class="col-12 d-flex flex-lg-row flex-column align-items-center">
     <div class="col-lg-7 me-lg-5  ol7">
