Updated code with new changes

--- a/index.html
+++ b/index.html
@@ -80,6 +80,17 @@
     <i class="fa-solid fa-arrow-up"></i>
 
 </a>
+
+<!-- TOP-ANIMATION -->
+ <div class="fixo">
+<span class="top-ani"></span>
+</div>
+
+    <div class="fixo1">
+        <span class="top-ani"></span>
+        </div>
+<!-- TOP-ANIMATION -->
+
   <!-- TOP -->
     <!-- NAVBAR -->
 
