Updated code with new changes

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
  <!-- HOME START -->
   <div class="container-fluid d-flex flex-column justify-content-center align-items-center h100 my-5">
 <div class="col-12 mx-auto d-flex justify-content-center flex-column ">
-   <div class="d-flex col-12 flex-row justify-content-center">
+   <div class="d-flex col-12 flex-row justify-content-center pt-5 ">
     <p class="pe-5">Hey There! We are <svg xmlns="http://www.w3.org/2000/svg" width="50" class="arr" height="6" viewBox="0 0 50 6">
         <path d="M50 3L45 0.113249V5.88675L50 3ZM0 3.5H45.5V2.5H0V3.5Z"></path>
     </svg></p>
@@ -332,6 +332,21 @@
 </div>
   </div>
  <!-- HOME END -->
+
+ <!-- OUR PARTNER START-->
+  <div class="container roun ">
+    <h6>Our Trusted Partner</h6>
+    <marquee width="100%" direction="left" class="py-5"  height="100px" scrollamount="10">
+   
+        <img src="Assets/Partner-Image/partner-01.png" class="img-fluid mx-5 px-5" alt="">
+
+        <img src="Assets/Partner-Image/partner-02.png" class="img-fluid mx-5 px-5" alt="">
+       <img src="Assets/Partner-Image/partner-03.png" class="img-fluid mx-5 px-5" alt="">
+        <img src="Assets/Partner-Image/partner-04.png" class="img-fluid mx-5 px-5" alt="">
+    </marquee>
+    <h6 class="float-end mt-3">Almost 20+ Partner we have</h6>
+  </div>
+ <!-- OUR PARTNER END-->
 
  <!-- CONTACT-US -->
 
