Updated code with new changes

--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@
 </div>
 <!-- OFFCANVAS -->
  <!-- HOME START -->
-  <div class="container-fluid d-flex flex-column justify-content-center align-items-center h100 my-5">
-<div class="col-12 mx-auto d-flex justify-content-center flex-column ">
+  <div class="container-fluid d-flex flex-column justify-content-center align-items-center h100 my-5 pt-5 pb-5">
+<div class="col-12 mx-auto d-flex justify-content-center flex-column pt-5 ">
    <div class="d-flex col-12 flex-row justify-content-center pt-5 ">
     <p class="pe-5">Hey There! We are <svg xmlns="http://www.w3.org/2000/svg" width="50" class="arr" height="6" viewBox="0 0 50 6">
         <path d="M50 3L45 0.113249V5.88675L50 3ZM0 3.5H45.5V2.5H0V3.5Z"></path>
@@ -308,7 +308,7 @@
 
 <h2 class="display-2 text-center head-1 col-12">INTELLIGENT & CYBER SECURE <span class="fw-bolder">SOLUTIONS</span>.</h2>
 </div>
-<div class="col-12 d-flex flex-lg-row flex-column align-items-center">
+<div class="col-12 d-flex flex-lg-row flex-column align-items-center pb-5">
     <div class="col-lg-7 me-lg-5  ol7">
         <img src="Assets/Banner-Image/banner-img-1.jpg" class="img-fluid  image-1" alt="">
     </div>
@@ -347,6 +347,9 @@
     <h6 class="float-end mt-3">Almost 20+ Partner we have</h6>
   </div>
  <!-- OUR PARTNER END-->
+<!-- Who We Are start -->
+ 
+<!-- Who We Are end -->
 
  <!-- CONTACT-US -->
 
