Updated code with new changes

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
  <!-- HOME END -->
 
  <!-- OUR PARTNER START-->
-  <div class="container roun ">
+  <div class="container roun my-5 ">
     <h6>Our Trusted Partner</h6>
     <marquee width="100%" direction="left" class="py-5"  height="100px" scrollamount="10">
    
@@ -348,7 +348,65 @@
   </div>
  <!-- OUR PARTNER END-->
 <!-- Who We Are start -->
- 
+ <div class="container-fluid mt-5 py-5 who d-flex flex-column justify-content-center align-items-center">
+    <div class="container d-flex flex-lg-row flex-column py-5">
+        <p class="pe-5 fs-4 text-white col-lg-5">Hey There! We are <svg xmlns="http://www.w3.org/2000/svg" width="50" class="arr" height="6" viewBox="0 0 50 6">
+            <path d="M50 3L45 0.113249V5.88675L50 3ZM0 3.5H45.5V2.5H0V3.5Z"></path>
+        </svg></p>
+        <h2 class="text-white col-lg-7 fs-1">
+            
+Axleo is a business that provides services related to online marketing.
+        </h2>
+    </div>
+    <div class="container d-flex flex-lg-row flex-column py-5 gth">
+     <div class="col-lg-3 me-3 rounded-3">
+        <img src="Assets/Pictures/why-pic-1.jpg" class="img-fluid col-12" alt="">
+     </div>
+     <div class="col-lg-3 mt-4">
+        <img src="Assets/Pictures/why-pic-2.png" class="img-fluid col-12" alt="">
+
+     </div>
+     <div class="col-lg-6 col-12 ms-lg-5 d-flex flex-column justify-content-center">
+        <h5 class="color-black fw-light fs-5 ">
+            Digital agencies can vary in size and
+specialization. Some may focus
+onspecificniches, such as healthcare or
+e-commerce, while others may offer
+acomprehensive.
+        </h5>
+     <div class="d-flex flex-row col-12">
+        <a href="" class="text-decoration-none mt-4">
+            <button class="d-flex flex-row align-items-center p-2 px-2 btn1 ">About More   <svg class="ms-2 s1" xmlns="http://www.w3.org/2000/svg"   width="12" height="12" viewBox="0 0 12 12">
+                <path d="M10.0035 3.40804L1.41153 12L0 10.5885L8.59097 1.99651H1.01922V0H12V10.9808H10.0035V3.40804Z"></path>
+            </svg>
+        <span class="under-hover"></span>
+        </button>
+        </a>
+<!--  -->
+        
+
+
+        <!--  -->
+    </div>
+     </div>
+    </div>
+    <div class="container ">
+        <div class="col-lg-8 klo py-3 col-12 ms-auto d-flex flex-lg-row flex-md-row flex-column align-items-center justify-content-lg-around">
+           <div class="col-lg-2 col-md-4 col-6">
+            <h2 class="display-3 text-white fw-bold">70+</h2>
+            <h6 class="text-white fw-normal">Professional Experts</h6>
+           </div>
+           <div class="col-lg-2 col-md-4 col-6">
+            <h2 class="display-3 text-white fw-bold">20+</h2>
+            <h6 class="text-white fw-normal">Project Complete</h6>
+           </div>
+           <div class="col-lg-2 col-md-4 col-6">
+            <h2 class="display-3 text-white fw-bold">16+</h2>
+            <h6 class="text-white fw-normal">World-Wide Cleints</h6>
+           </div>
+        </div>
+    </div>
+ </div>
 <!-- Who We Are end -->
 
  <!-- CONTACT-US -->
