Updated code with new changes

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <!-- NAVBAR -->
 
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid" id="navbar">
+    <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
       <div class="container-fluid d-flex flex-row">
         <a class="navbar-brand" href="#">
           <img src="assets/Logo/Favicon.PNG" alt="Logo" class="col-lg-2 col-2" /> <!-- Replace with actual logo path -->
@@ -173,6 +173,7 @@
           </form>
         </div>
       </div>
+      <div class="" id="navunder"></div>
     </nav>
     <!-- NAVBAR -->
      <!-- INFO CANVAS -->
@@ -541,7 +542,7 @@ acomprehensive.
 
 </div>
 
- 
+
 
  <!-- CONTACT-US -->
 
