Updated code with new changes

--- a/index.html
+++ b/index.html
@@ -418,6 +418,118 @@
     </div>
   </div>
   <!-- Who We Are end -->
+<!-- SERVICE START 1 -->
+<div class="container d-flex flex-lg-row justify-content-between pt-5">
+  <p class="ms-0 pe-5">Solution Provide <svg xmlns="http://www.w3.org/2000/svg" width="50" class="arr" height="6"
+      viewBox="0 0 50 6">
+      <path d="M50 3L45 0.113249V5.88675L50 3ZM0 3.5H45.5V2.5H0V3.5Z"></path>
+    </svg></p>
+  <div>
+    <h2 class="display-6 text-end">
+      <span class="fw-bold">TO PROVIDE SMART</span>
+      <br>
+      <span class="fw-normal"> SOLUTION.</span>
+    </h2>
+  </div>
+
+</div>
+<div class="container py-5">
+  <div class="row g-4">
+    <!-- Card 1 -->
+    <div class="col-md-6 col-lg-6 service-card">
+      <div class="d-flex flex-lg-row flex-column">
+        <div class="service-icon col-1 d-flex flex-row  justify-content-center align-items-center">
+          <i class="fas fa-search"></i>
+        </div>
+        <div class="text-start ps-lg-2">
+        <h4 class="service-title">Search Engine Optimization</h4>
+        <p class="service-description ">
+          Elevate your brand & engage your audience. Our expert team combines innovative design with cutting-edge technology to deliver.
+        </p>
+      </div>
+
+      </div>
+
+      
+    </div>
+    <!-- Card 2 -->
+    <div class="col-md-6 col-lg-6 service-card">
+      <div class="d-flex flex-lg-row flex-column">
+        <div class="service-icon col-1 d-flex flex-row  justify-content-center align-items-center">
+          <i class="fas fa-paint-brush"></i>
+        </div>
+        <div class="text-start ps-lg-2">
+          <h4 class="service-title">Graphic Design and Branding</h4>  
+        <p class="service-description ">
+          Elevate your brand & engage your audience. Our expert team combines innovative design with cutting-edge technology to deliver.
+        </p>
+      </div>
+
+      </div>
+    </div>
+    <!-- Card 3 -->
+    <div class="col-md-6 col-lg-6 service-card">
+      <div class="d-flex flex-lg-row flex-column">
+        <div class="service-icon col-1 d-flex flex-row  justify-content-center align-items-center">
+          <i class="fas fa-file-alt"></i>
+        </div>
+        <div class="text-start ps-lg-2">
+          <h4 class="service-title">Content Creation and Management</h4>
+              <p class="service-description ">
+          Elevate your brand & engage your audience. Our expert team combines innovative design with cutting-edge technology to deliver.
+        </p>
+      </div>
+
+      </div>
+    </div>
+    <!-- Card 6 -->
+    <div class="col-md-6 col-lg-6 service-card">
+      <div class="d-flex flex-lg-row flex-column">
+        <div class="service-icon col-1 d-flex flex-row  justify-content-center align-items-center">
+          <i class="fas fa-code"></i>
+        </div>
+        <div class="text-start ps-lg-2">
+          <h4 class="service-title">Website Design and Development</h4>
+              <p class="service-description ">
+          Elevate your brand & engage your audience. Our expert team combines innovative design with cutting-edge technology to deliver.
+        </p>
+      </div>
+
+      </div>
+    </div>
+    <!-- Card 5 -->
+    <div class="col-md-6 col-lg-6 service-card">
+      <div class="d-flex flex-lg-row flex-column">
+        <div class="service-icon col-1 d-flex flex-row  justify-content-center align-items-center">
+          <i class="fas fa-mobile-alt"></i>
+        </div>
+        <div class="text-start ps-lg-2">
+          <h4 class="service-title">Mobile App Development</h4>
+        <p class="service-description ">
+          Elevate your brand & engage your audience. Our expert team combines innovative design with cutting-edge technology to deliver.
+        </p>
+      </div>
+
+      </div>
+    </div>
+        <!-- Card 6 -->
+        <div class="col-md-6 col-lg-6 service-card">
+          <div class="d-flex flex-lg-row flex-column">
+            <div class="service-icon col-1 d-flex flex-row  justify-content-center align-items-center">
+              <i class="fas fa-mobile-alt"></i>
+            </div>
+            <div class="text-start ps-lg-2">
+              <h4 class="service-title">Mobile App Development</h4>
+            <p class="service-description ">
+              Elevate your brand & engage your audience. Our expert team combines innovative design with cutting-edge technology to deliver.
+            </p>
+          </div>
+    
+          </div>
+        </div>
+  </div>
+</div>
+<!-- SERVICE END 1 -->
 
   <!-- SERVICE START -->
   <div class="container-fluid my-4 mt-5 pt-5 ">
