--- a/bookmeeting.html
+++ b/bookmeeting.html
@@ -146,12 +146,11 @@
         </ul>
 
         <!-- Offcanvas Button -->
-        <form class="d-flex " role="search">
+         <form class="d-flex " role="search">
           <div class="input-group">
-            <button class="btn btn-red" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop"
-              aria-controls="offcanvasTop">
-              <i class="fa-solid fa-bars"></i>
-            </button>
+          <button class="btn btn-red" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight1" aria-controls="offcanvasRight1">
+        <i class="fa-solid fa-bars"></i>
+</button>
           </div>
         </form>
       </div>
@@ -162,55 +161,60 @@
 
   <!-- NAVBAR -->
   <!-- INFO CANVAS -->
-  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight1" aria-labelledby="offcanvasRightLabel">
+  <div class="offcanvas offcanvas-end who1 " tabindex="-1" id="offcanvasRight1" aria-labelledby="offcanvasRightLabel">
     <div class="offcanvas-header">
-      <!-- <h5 class="offcanvas-title" id="offcanvasRightLabel">Offcanvas right</h5> -->
-      <!-- <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button> -->
+      <!-- Brand Logo and Close Button -->
+      <div class="d-flex justify-content-between w-100 align-items-center">
+        <img src="Assets/Logo/Favicon.PNG" alt="Runok Logo" class="logo" style="width: 50px;">
+        <button type="button" class="bg-transparent border-0 rounded-circle" data-bs-dismiss="offcanvas" aria-label="Close">
+          <i class="fa fa-window-close bg text-white fs-5 p-2 rounded-circle" aria-hidden="true"></i>
+        </button>
+      </div>
     </div>
     <div class="offcanvas-body">
-      <div class="contact-section container text-center">
-        <!-- Brand Name -->
-        <h1 class="brand-name">Arino</h1>
-        <p>Do you have a project in your mind? Keep connect us.</p>
-
-        <!-- Contact Info -->
-        <div class="text-start mt-4">
-          <h5>Contact Us</h5>
-          <p>
-            <span class="contact-icon me-2">📞</span>
-            +44 454 7800 112
-          </p>
-          <p>
-            <span class="contact-icon me-2">✉️</span>
-            infotech@arino.com
-          </p>
-          <p>
-            <span class="contact-icon me-2">📍</span>
-            50 Wall Street Suite, 44150 Ohio, United States
-          </p>
+      <!-- About Section -->
+      <div class="about-section text-start">
+        <h2 class="fw-bolder py-3 text-white">About US</h2>
+        <h5 class="text-white">
+          AI-GRC-Software Development Solution .
+          We Develop Secure & Intelligent Solutions
+        </h5>
         </div>
+  
+      <!-- Contact Info -->
+      <div class="contact-info mt-1">
 
-        <!-- Subscribe -->
-        <div class="mt-4">
-          <h5>Subscribe</h5>
-          <form class="d-flex justify-content-center align-items-center mt-2">
-            <input type="email" class="form-control me-2" placeholder="example@gmail.com" aria-label="Email">
-            <button type="submit" class="btn btn-send">Send</button>
-          </form>
-        </div>
+        <p class="pt-3">
 
-        <!-- Footer -->
-        <p class="mt-4">
-          At vero eos et accusamus et iusto odio as part dignissimos ducimus qui blandit.
+          <i class="fa-solid fa-location-dot me-2 bg p-2 text-white rounded-circle"></i> 
+    
+
+    <span class="text-white pt-5 fs-6">Conroy  Windermere, FL-34786, USA</span>
         </p>
+        <p>
+          <i class="fa-solid fa-phone me-2  bg p-2 text-white rounded-circle"></i> 
 
-        <!-- Social Icons -->
-        <div class="social-icons mt-3">
-          <a href="#"><i class="bi bi-linkedin"></i></a>
-          <a href="#"><i class="bi bi-instagram"></i></a>
-          <a href="#"><i class="bi bi-youtube"></i></a>
-          <a href="#"><i class="bi bi-slack"></i></a>
-        </div>
+
+          <span class="text-white">          + 1 (689) 276-4636</span>
+        </p>
+        <p>
+          <i class="fa-solid fa-envelope me-2  bg p-2 text-white rounded-circle"></i> 
+
+
+          <span class="text-white"> info@aisystemsoft.com</span>
+        </p>
+      </div>
+  <div class="col-12 mx-auto">
+<img src="Assets/Pictures/exp-img-1.png" class="img-fluid col-12" alt="">
+  </div>
+      <!-- Social Media Icons -->
+      <div class="social-icons  d-flex justify-content-around gap-3 position-absolute bottom-0 col-12 w100 ">
+<div class="col-8 mx-auto  d-flex flex-row justify-content-between">
+  <a href="#"><i class="fa-brands fa-facebook"></i></a>
+  <a href="#"><i class="fa-brands fa-twitter"></i></a>
+  <a href="#"><i class="fa-brands fa-instagram"></i></a>
+  <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+</div>
       </div>
     </div>
   </div>
