--- a/index.html
+++ b/index.html
@@ -117,31 +117,31 @@ Windermere, Windermere, FL34786, USA
             </a>
             <span class="navhover"></span>
             <ul class="dropdown-menu mx-auto">
-              <li><a class="dropdown-item nav-link" href="cybron/about.html">About Cyb</a></li>
-              <li><a class="dropdown-item nav-link" href="cybron/why.html">Why Chose US</a></li>
-              <li><a class="dropdown-item nav-link" href="cybron/evolution.html">Evolution of Cybron</a></li>
-              <li><a class="dropdown-item nav-link" href="cybron/framework.html">Framework of Cybron</a></li>
-              <li><a class="dropdown-item nav-link" href="cybron/certifications.html">Certfication</a></li>
-              <li><a class="dropdown-item nav-link" href="cybron/assessment.html">Assessment and Methodology</a></li>
-              <li><a class="dropdown-item nav-link" href="cybron/careers.html">Careers & Opportunities</a></li>
+              <li><a class="dropdown-item nav-link" href="AiProductSolution.html">AiProductSolution</a></li>
+              <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Solutions</a></li>
+              <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">Web & App Development</a></li>
+              <li><a class="dropdown-item nav-link" href="EcommerceSolution.html">Ecommerce Solutions</a></li>
+              <li><a class="dropdown-item nav-link" href="DigitalMarketing.html">
+                Digital Marketing</a></li>
+
             </ul>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Pages
+          <li class="nav-item ">
+            <a class="nav-link" href="about.html"  aria-expanded="false">
+             About-Us
             </a>
             <span class="navhover"></span>
-            <ul class="dropdown-menu mx-auto">
+            <!-- <ul class="dropdown-menu mx-auto">
               <li><a class="dropdown-item nav-link" href="memberships/ScoutMemberships.html">Cybron Scout
                   Memberships</a></li>
               <li><a class="dropdown-item nav-link" href="memberships/AssociateMemberships.html">Cybron Associate
                   Memberships</a></li>
               <li><a class="dropdown-item nav-link" href="memberships/ProfessionalMemberships.html">Cybron Professional
                   Memberships</a></li>
-            </ul>
+            </ul> -->
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="blog.html">Portfolio</a>
+            <a class="nav-link" href="Portfolio">Portfolio</a>
             <span class="navhover"></span>
           </li>
           <li class="nav-item">
@@ -153,10 +153,9 @@ Windermere, Windermere, FL34786, USA
         <!-- Offcanvas Button -->
         <form class="d-flex " role="search">
           <div class="input-group">
-            <button class="btn btn-red" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop"
-              aria-controls="offcanvasTop">
-              <i class="fa-solid fa-bars"></i>
-            </button>
+          <button class="btn btn-red" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight1" aria-controls="offcanvasRight1">
+        <i class="fa-solid fa-bars"></i>
+</button>
           </div>
         </form>
       </div>
@@ -167,58 +166,64 @@ Windermere, Windermere, FL34786, USA
 
   <!-- NAVBAR -->
   <!-- INFO CANVAS -->
-  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight1" aria-labelledby="offcanvasRightLabel">
+  <div class="offcanvas offcanvas-end who1 " tabindex="-1" id="offcanvasRight1" aria-labelledby="offcanvasRightLabel">
     <div class="offcanvas-header">
-      <!-- <h5 class="offcanvas-title" id="offcanvasRightLabel">Offcanvas right</h5> -->
-      <!-- <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button> -->
+      <!-- Brand Logo and Close Button -->
+      <div class="d-flex justify-content-between w-100 align-items-center">
+        <img src="Assets/Logo/Favicon.PNG" alt="Runok Logo" class="logo" style="width: 50px;">
+        <button type="button" class="bg-transparent border-0 rounded-circle" data-bs-dismiss="offcanvas" aria-label="Close">
+          <i class="fa fa-window-close bg text-white fs-5 p-2 rounded-circle" aria-hidden="true"></i>
+        </button>
+      </div>
     </div>
     <div class="offcanvas-body">
-      <div class="contact-section container text-center">
-        <!-- Brand Name -->
-        <h1 class="brand-name">Arino</h1>
-        <p>Do you have a project in your mind? Keep connect us.</p>
-
-        <!-- Contact Info -->
-        <div class="text-start mt-4">
-          <h5>Contact Us</h5>
-          <p>
-            <span class="contact-icon me-2">📞</span>
-            +44 454 7800 112
-          </p>
-          <p>
-            <span class="contact-icon me-2">✉️</span>
-            infotech@arino.com
-          </p>
-          <p>
-            <span class="contact-icon me-2">📍</span>
-            50 Wall Street Suite, 44150 Ohio, United States
-          </p>
+      <!-- About Section -->
+      <div class="about-section text-start">
+        <h2 class="fw-bolder py-3 text-white">About US</h2>
+        <h5 class="text-white">
+          AI-GRC-Software Development Solution .
+          We Develop Secure & Intelligent Solutions
+        </h5>
         </div>
+  
+      <!-- Contact Info -->
+      <div class="contact-info mt-1">
 
-        <!-- Subscribe -->
-        <div class="mt-4">
-          <h5>Subscribe</h5>
-          <form class="d-flex justify-content-center align-items-center mt-2">
-            <input type="email" class="form-control me-2" placeholder="example@gmail.com" aria-label="Email">
-            <button type="submit" class="btn btn-send">Send</button>
-          </form>
-        </div>
+        <p class="pt-3">
 
-        <!-- Footer -->
-        <p class="mt-4">
-          At vero eos et accusamus et iusto odio as part dignissimos ducimus qui blandit.
+          <i class="fa-solid fa-location-dot me-2 bg p-2 text-white rounded-circle"></i> 
+    
+
+    <span class="text-white pt-5 fs-6">Conroy  Windermere, FL-34786, USA</span>
         </p>
+        <p>
+          <i class="fa-solid fa-phone me-2  bg p-2 text-white rounded-circle"></i> 
 
-        <!-- Social Icons -->
-        <div class="social-icons mt-3">
-          <a href="#"><i class="bi bi-linkedin"></i></a>
-          <a href="#"><i class="bi bi-instagram"></i></a>
-          <a href="#"><i class="bi bi-youtube"></i></a>
-          <a href="#"><i class="bi bi-slack"></i></a>
-        </div>
+
+          <span class="text-white">          + 1 (689) 276-4636</span>
+        </p>
+        <p>
+          <i class="fa-solid fa-envelope me-2  bg p-2 text-white rounded-circle"></i> 
+
+
+          <span class="text-white"> info@aisystemsoft.com</span>
+        </p>
+      </div>
+  <div class="col-12 mx-auto">
+<img src="Assets/Pictures/exp-img-1.png" class="img-fluid col-12" alt="">
+  </div>
+      <!-- Social Media Icons -->
+      <div class="social-icons  d-flex justify-content-around gap-3 position-absolute bottom-0 col-12 w100 ">
+<div class="col-8 mx-auto  d-flex flex-row justify-content-between">
+  <a href="#"><i class="fa-brands fa-facebook"></i></a>
+  <a href="#"><i class="fa-brands fa-twitter"></i></a>
+  <a href="#"><i class="fa-brands fa-instagram"></i></a>
+  <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+</div>
       </div>
     </div>
   </div>
+  
   <!-- INFO CANVAS -->
   <!-- OFFCANVAS -->
   <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
@@ -625,13 +630,13 @@ Windermere, Windermere, FL34786, USA
   <!-- Who We Are start -->
   <div class="container-fluid mt-5 py-5 who d-flex flex-column justify-content-center align-items-center">
     <div class="container d-flex flex-lg-row flex-column py-5">
-      <p class="pe-5 fs-4 text-white col-lg-5">Hey There! We are <svg xmlns="http://www.w3.org/2000/svg" width="50"
+      <p class="pe-5 fs-4 text-white col-lg-5">About-Us <svg xmlns="http://www.w3.org/2000/svg" width="50"
           class="arr" height="6" viewBox="0 0 50 6">
           <path d="M50 3L45 0.113249V5.88675L50 3ZM0 3.5H45.5V2.5H0V3.5Z"></path>
         </svg></p>
-      <h2 class="text-white col-lg-7 fs-1">
+      <h2 class="text-white col-lg-7 fs-4">
 
-        Axleo is a business that provides services related to online marketing.
+        At AI-GRC-Software Development Solution, we specialize in creating secure and intelligent software tailored to your business needs. Our solutions are designed to streamline operations, enhance decision-making, and ensure compliance with advanced AI-driven technologies. Let us help you build a smarter and safer future.
       </h2>
     </div>
     <div class="container d-flex flex-lg-row flex-column py-5 gth">
@@ -926,7 +931,7 @@ Windermere, Windermere, FL-34786, USA</span>
         </div>
       </div>
     </div>
-    <p class="mb-0 mx-auto bg-col text-white container-fluid p-3 text-center bottom-footer">© 2024 Cybron International.
+    <p class="mb-0 mx-auto bg-col text-white container-fluid p-3 text-center bottom-footer">© 2024 AiSystemSoft
       All Rights Reserved</p>
   </footer>
 
