--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,8 @@ Windermere, Windermere, FL34786, USA
     <div class="container-fluid d-flex flex-row justify-content-between">
       <!-- Logo -->
       <a class="navbar-brand" href="#">
-        <img src="assets/Logo/Favicon.PNG" alt="Logo" class="col-lg-2 col-2" />
+             <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
+
       </a>
 
       <!-- Toggler Button -->
@@ -170,7 +171,8 @@ Windermere, Windermere, FL34786, USA
     <div class="offcanvas-header">
       <!-- Brand Logo and Close Button -->
       <div class="d-flex justify-content-between w-100 align-items-center">
-        <img src="Assets/Logo/Favicon.PNG" alt="Runok Logo" class="logo" style="width: 50px;">
+        <img src="Assets/Logo/logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
+
         <button type="button" class="bg-transparent border-0 rounded-circle" data-bs-dismiss="offcanvas" aria-label="Close">
           <i class="fa fa-window-close bg text-white fs-5 p-2 rounded-circle" aria-hidden="true"></i>
         </button>
@@ -179,7 +181,8 @@ Windermere, Windermere, FL34786, USA
     <div class="offcanvas-body">
       <!-- About Section -->
       <div class="about-section text-start">
-        <h2 class="fw-bolder py-3 text-white">About US</h2>
+        <h2 class="fw-bolder py-3 text-white">
+</h2>
         <h5 class="text-white">
           AI-GRC-Software Development Solution .
           We Develop Secure & Intelligent Solutions
@@ -230,7 +233,8 @@ Windermere, Windermere, FL34786, USA
     <div class="offcanvas-header container">
       <h5 class="offcanvas-title" id="offcanvasTopLabel">
         <a class="navbar-brand" href="#">
-          <img src="assets/Logo/Favicon.PNG" alt="Logo" class="col-lg-2 col-2" /> <!-- Replace with actual logo path -->
+               <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
+ <!-- Replace with actual logo path -->
         </a>
       </h5>
       <button type="button" class="text-white  bg-transparent  border-0" style="color: white !important;"
@@ -427,63 +431,59 @@ Windermere, Windermere, FL-34786, USA</span>
   <!-- FOOTER -->
 
   <footer class=" pt-5">
-    <div class="container-fluid px-4">
+    <div class="container-fluid px-4 py-3">
       <div class="row">
-        <div class="col-lg-3 col-md-6 mb-4">
-          <img src="Assets/Logo/Favicon.PNG" alt="Cybron Logo" class="mb-3 col-lg-4 m-0 p-0">
+        <div class="col-lg-3  col-12 mb-4">
+                        <img src="Assets/Logo/logo.png" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
 
-          <p class="locte text-white fs-6">404 Old Bedford Road, Luton, England LU2 7BP<br>SIC codes — 62012 United
-            Kingdom</p>
+          <p class="locte text-white fs-6 ">AI-GRC-Software Development Solution . We Develop Secure & Intelligent Solutions</p>
           <!-- <p><a href="mailto:cybron@cybroninternational.com" class="text-white">cybron@cybroninternational.com</a></p> -->
         </div>
 
-        <div class="col-lg-3 col-md-6 mb-4">
-          <h5 class="mb-3">Cybron Services</h5>
-          <ul class="list-unstyled">
-            <li><a href="#" class="text-white fw-lighter text-decoration-none">About Cybron</a></li>
-            <li><a href="#" class="text-white fw-lighter text-decoration-none">Memberships</a></li>
-            <li><a href="#" class="text-white fw-lighter text-decoration-none">Certifications</a></li>
-            <li><a href="#" class="text-white fw-lighter text-decoration-none">Partners</a></li>
-            <li><a href="#" class="text-white fw-lighter text-decoration-none">Trainers</a></li>
+        <div class="col-lg-3  col-12 col-md-6 mb-4 ps-lg-5">
+          <h3 class="mb-3 text-white">Usefull Links</h3>
+          <ul class="list-unstyled fs-6">
+            <li class="mb-1 "><a href="index.html" class="text-white fw-lighter text-decoration-none ">Home</a>    
+              <span class="navhover"></span></li>
+            <li class="mb-1"><a href="about.html" class="text-white fw-lighter text-decoration-none">About-Us</a></li>
+            <li class="mb-1"><a href="portfolio.html" class="text-white fw-lighter text-decoration-none">Portfolio</a></li>
+            <li class="mb-1"><a href="AiProductSolution.html" class="text-white fw-lighter text-decoration-none">Service</a></li>
+            <li class="mb-1"><a href="contact.html" class="text-white fw-lighter text-decoration-none">Contact Us</a></li>
           </ul>
+        
         </div>
 
-        <div class="col-lg-3 col-md-6 mb-4">
-          <h5 class="mb-3">Quick Links</h5>
-          <ul class="list-unstyled">
-            <li><a href="#" class="text-white fw-lighter text-decoration-none">Enroll Your School</a></li>
-            <li><a href="#" class="text-white fw-lighter text-decoration-none">Self Enrollment Process</a></li>
-            <li><a href="#" class="text-white fw-lighter text-decoration-none">Terms of Payment</a></li>
-            <li><a href="#" class="text-white fw-lighter text-decoration-none">Privacy Policy</a></li>
-            <li><a href="#" class="text-white fw-lighter text-decoration-none">Where to Find Us</a></li>
-          </ul>
+        <div class="col-lg-3 col-12 col-md-6 mb-4 ps-lg-5">
+          <h3 class="mb-3 text-white">Contact Us</h3>
+          <ul class="list-unstyled fs-6">
+            <li class="mb-1"><a href="mailto:info@aisystemsoft.com?subject=Inquiry&body=Hello, I would like to know more about your services."  class="text-white fw-lighter text-decoration-none"> info@aisystemsoft.com</a></li>
+            <li class="mb-1 mt-2"><a href="tel:+16892764636" class="text-white fw-lighter text-decoration-none">+1 (689) 276-4636</a></li>
+
+
+            <li class="mb-1 mt-2"><a href="https://www.google.com/maps/place/Conroy+Windermere,+FL-34786,+USA" class="text-white fw-lighter text-decoration-none">
+              Conroy Windermere,<br> FL-34786, USA
+            </a></li>
+           </ul>
         </div>
 
-        <div class="col-lg-3 col-md-6 mb-4">
-          <h5 class="mb-3">Support</h5>
-          <ul class="list-unstyled">
-            <li><a href="#" class="text-white fw-lighter text-decoration-none">Email Us</a></li>
-            <li><a href="#" class="text-white fw-lighter text-decoration-none">Pricing and Plans</a></li>
-            <li><a href="#" class="text-white fw-lighter text-decoration-none">Contact Us</a></li>
-            <li><a href="#" class="text-white fw-lighter text-decoration-none">Cookies Policy</a></li>
-            <li><a href="#" class="text-white fw-lighter text-decoration-none">Help & FAQ</a></li>
-          </ul>
+        <div class="col-lg-3 col-12 col-md-6 mb-4">
+          <h3 class="mb-3 text-white">Subscribe newsletter</h3>
+          <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Email Address" aria-label="Recipient's username" aria-describedby="basic-addon2">
+            <div class="input-group-append">
+              <button class="btn bg text-white" type="button">
+                <i class="fa fa-paper-plane" aria-hidden="true"></i>
+              </button>
+            </div>
+          </div>
         </div>
       </div>
 
-      <div class="text-center mt-4 d-flex  flex-column justify-content-center justify-content-lg-between">
-        <div class="d-flex justify-content-center pb-3 mt-2">
-          <a href="#" class="text-white mx-2"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="text-white mx-2"><i class="fab fa-facebook"></i></a>
-          <a href="#" class="text-white mx-2"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="text-white mx-2"><i class="fab fa-linkedin"></i></a>
-        </div>
-      </div>
+ 
     </div>
-    <p class="mb-0 mx-auto bg-col text-white container-fluid p-3 text-center bottom-footer">© 2024 AiSystemSoft
+    <p class="mb-0 mx-auto bg-col pb-3 text-white container-fluid p-3 text-center bottom-footer">© 2024 AiSystemSoft
       All Rights Reserved</p>
   </footer>
-
 
   <!-- FOOTER -->
 
