--- a/getqoutes.html
+++ b/getqoutes.html
@@ -90,7 +90,8 @@
     <div class="container-fluid d-flex flex-row justify-content-between">
       <!-- Logo -->
       <a class="navbar-brand" href="#">
-        <img src="assets/Logo/Favicon.PNG" alt="Logo" class="col-lg-2 col-2" />
+             <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
+
       </a>
 
       <!-- Toggler Button -->
@@ -165,7 +166,8 @@
     <div class="offcanvas-header">
       <!-- Brand Logo and Close Button -->
       <div class="d-flex justify-content-between w-100 align-items-center">
-        <img src="Assets/Logo/Favicon.PNG" alt="Runok Logo" class="logo" style="width: 50px;">
+        <img src="Assets/Logo/logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
+
         <button type="button" class="bg-transparent border-0 rounded-circle" data-bs-dismiss="offcanvas" aria-label="Close">
           <i class="fa fa-window-close bg text-white fs-5 p-2 rounded-circle" aria-hidden="true"></i>
         </button>
@@ -174,7 +176,8 @@
     <div class="offcanvas-body">
       <!-- About Section -->
       <div class="about-section text-start">
-        <h2 class="fw-bolder py-3 text-white">About US</h2>
+        <h2 class="fw-bolder py-3 text-white">
+</h2>
         <h5 class="text-white">
           AI-GRC-Software Development Solution .
           We Develop Secure & Intelligent Solutions
@@ -224,7 +227,8 @@
     <div class="offcanvas-header container">
       <h5 class="offcanvas-title" id="offcanvasTopLabel">
         <a class="navbar-brand" href="#">
-          <img src="assets/Logo/Favicon.PNG" alt="Logo" class="col-lg-2 col-2" /> <!-- Replace with actual logo path -->
+               <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
+ <!-- Replace with actual logo path -->
         </a>
       </h5>
       <button type="button" class="text-white  bg-transparent  border-0" style="color: white !important;"
