--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@ Windermere, Windermere, FL34786, USA
 
 
   </a>
-
+<!-- MOUSE EFFECT -->
+<div class="cursor-point" id="cursorPoint"></div>
+ <!-- MOUSE EFFECT  -->
   <!-- TOP-ANIMATION -->
 
   <!-- TOP-ANIMATION -->
@@ -100,10 +102,10 @@ Windermere, Windermere, FL34786, USA
       </a>
 
       <!-- Toggler Button -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <button class="btn btn-red navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight1"
+      aria-controls="offcanvasRight1">
+      <i class="fa-solid fa-bars"></i>
+    </button>
 
       <!-- Collapsible Navbar Content -->
       <div class="collapse sdsd navbar-collapse d-flex flex-row justify-content-end" id="navbarSupportedContent">
@@ -152,7 +154,7 @@ Windermere, Windermere, FL34786, USA
         </ul>
 
         <!-- Offcanvas Button -->
-        <form class="d-flex " role="search">
+        <form class="d-lg-flex d-none" role="search">
           <div class="input-group">
             <button class="btn btn-red" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight1"
               aria-controls="offcanvasRight1">
@@ -382,7 +384,7 @@ Windermere, Windermere, FL34786, USA
   <div class="container-fluid who d-flex flex-lg-row flex-column py-5 my-5 m-0">
 
     <div class="col-lg-3 col-md-6 col-12  p-1 text-white1 d-flex flex-row align-items-center">
-      <img src="Assets/Pictures/exp-img-1.png" class="img-fluid col-12 rounded-3" alt="">
+      <img src="Assets/Pictures/pic.webp" class="img-fluid col-12 h-100  rounded-3" alt="">
     </div>
     <div class="col-lg-5 ps-lg-3 col-md-6 col-12 d-flex flex-row align-items-center">
       <h2 class="display-5 fw-normal col-lg-9 text-white1"><span class="num">30</span>+ Year Expericence Team</h2>
@@ -847,7 +849,7 @@ Windermere, Windermere, FL34786, USA
             <input type="email" class="form-control form-control1" id="email" placeholder="Your Email" required>
           </div>
           <div class="col-md-12">
-            <select class="form-select" aria-label="Default select example">
+            <select class="form-select" id="queryTopic" aria-label="Default select example">
               <option selected>Select Queary bTopic</option>
               <option value="AI Products & Solutions">AI Products & Solutions</option>
               <option value="GRC Solutions">GRC Solutions</option>
@@ -863,7 +865,7 @@ Windermere, Windermere, FL34786, USA
               placeholder="Write your message here..."></textarea>
           </div>
           <div class="col-12 text-center mb-5">
-            <button type="submit"
+            <button type="submit" id="contact-form"
               class="mt-3 mx-auto who text-white1 btn3 col-lg-4 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
               SEND NOW
               <i class="fa-solid fa-paper-plane icon-hover"></i>
