--- a/index.html
+++ b/index.html
@@ -82,9 +82,7 @@ Windermere, Windermere, FL34786, USA
 
 
   </a>
-<!-- MOUSE EFFECT -->
-<div class="cursor-point" id="cursorPoint"></div>
- <!-- MOUSE EFFECT  -->
+
   <!-- TOP-ANIMATION -->
 
   <!-- TOP-ANIMATION -->
@@ -298,10 +296,10 @@ Windermere, Windermere, FL34786, USA
   </div>
   <!-- OFFCANVAS -->
   <!-- HOME START -->
-  <div class="container-fluid d-flex flex-column justify-content-center align-items-center h100 my-5 pt-5 pb-0"
+  <div class="container-fluid d-flex flex-column justify-content-lg-center  h100 my-5 pt-5 pb-0"
     id="home">
-    <div class="col-12 mx-auto d-flex justify-content-center flex-column pt-5 ">
-      <div class="d-flex col-12 flex-row justify-content-center pt-5 ">
+    <div class="col-xxl-12 col-xl-12 col-12 mx-auto d-flex justify-content-lg-center flex-column pt-5 ">
+      <div class="d-flex col-12 flex-row justify-content-lg-center pt-5 ">
         <p class="pe-5 ">Hey There! We are <svg xmlns="http://www.w3.org/2000/svg" width="50" class="arr" height="6"
             viewBox="0 0 50 6">
             <path d="M50 3L45 0.113249V5.88675L50 3ZM0 3.5H45.5V2.5H0V3.5Z"></path>
@@ -326,11 +324,11 @@ Windermere, Windermere, FL34786, USA
           </svg></span>
       </div>
 
-      <h2 class="display-2 text-center head-1 col-12 ">AI-GRC-Software
+      <h2 class="display-1  text-lg-center head-1 col-lg-12 col-xxl-12 col-xl-12 col-12 mx-auto">AI-GRC-Software
         <span class="str">Development <span class="str">Solution</span> </span>.
       </h2>
 
-      <p class="text-center py-3">We Develop Secure & Intelligent Solutions </p>
+      <p class="text-lg-center py-3">We Develop Secure & Intelligent Solutions </p>
     </div>
     <div class="col-12 d-flex flex-lg-row flex-column align-items-center pb-5">
       <div class="col-lg-7 me-lg-5  ol7">
