--- a/AiProductSolution.html
+++ b/AiProductSolution.html
@@ -375,37 +375,48 @@
         <!-- Service Overview -->
         <div class="row mb-4 px-lg-3">
             <div class="col">
-                <h2 class=" py-3 fs-1">Service Overview</h2>
+                <h2 class=" py-3 fs-6 fw-bold text-capitalize">expertise you can trust</h2>
                 <div class="d-flex flex-lg-row flex-column">
-                    <p class="fs-5 fw-normal col-lg-6 text-start">
-                        As we reflect on this achievement, we look forward to continuing our journey of digital
-                        innovation, creating transformative solutions, and shaping the future of the digital landscape.
-                        Celebrating a major milestone in digital services is a significant occasion.
-                    </p>
-                    <p class="fs-5 fw-normal col-lg-6 text-start">
-                        As we reflect on this achievement, we look forward to continuing our journey of digital
-                        innovation, creating transformative solutions, and shaping the future of the digital landscape.
-                        Celebrating a major milestone in digital services is a significant occasion.
-                    </p>
-                </div>
-            </div>
-        </div>
+   <div class="col-lg-9 col-12">
+    <h2 class="fw-bold fs-1">
+        We empower businesses with advanced AI technologies to streamline operations <span class="col-org">&</span>  unlock new opportunities for growth and innovation.
+    </h2>
+    <p class="pt-3 fw-lighter col-lg-11">
+        What began as a simple idea and a shared dream has evolved into a mission to empower businesses with cutting-edge AI technologies. Since our founding, we've been dedicated to driving innovation, streamlining operations, and enhancing decision-making.
 
-        <!-- Key Features -->
-        <div class="row mb-4 px-lg-3">
-            <div class="col">
-                <h2 class=" py-3 fs-1">Key Features</h2>
-                <div class="d-flex flex-lg-row flex-column">
-                    <p class="fs-5 fw-normal col-lg-6 text-start">
-                        As we reflect on this achievement, we look forward to continuing our journey of digital
-                        innovation, creating transformative solutions, and shaping the future of the digital landscape.
-                        Celebrating a major milestone in digital services is a significant occasion.
-                    </p>
-                    <p class="fs-5 fw-normal col-lg-6 text-start">
-                        These features contribute to a robust email marketing strategy, enabling businesses to send
-                        targeted, personalized, and automated campaigns while ensuring compliance and security. When
-                        choosing an email marketing platform.
-                    </p>
+        From humble beginnings to ambitious goals, <br> <br> our journey is fueled by an unwavering commitment to progress and transformative technology. We believe in pushing boundaries to unlock new possibilities and create solutions that redefine industries. Together, we aim to build a smarter, more efficient future powered by innovation.
+    </p>
+   </div>
+   <div class="col-lg-3 col-12 bg py-4  d-flex flex-column  col-12 px-lg-0 px-3  mb-4">
+ 
+   <div class="col-lg-11 col-10 mx-auto p-2 rounded-3 bg-white   d-flex  align-items-center flex-row justify-content-around   mb-4">
+    <i class="fas fa-tasks fs-5  bg text-white p-3 rounded-3"></i>
+ <div class="d-flex flex-column justify-content-center ">
+    <h4>150 Project</h4>
+    <p class="fw-light lh-1">We Have Completed</p>
+ </div>
+ 
+</div>
+  
+  <div class="col-lg-11 mx-auto p-2 rounded-3 bg-white   d-flex  align-items-center flex-row justify-content-around col-10  mb-4">
+
+    <i class="fas fa-smile fs-5  bg text-white p-3 rounded-3"></i>
+    <div class="d-flex flex-column justify-content-center ">
+    <h3>98 <span class="">%</span></h3>
+    <p class="fw-light lh-1">Customer Satisfaction</p>
+</div>
+  </div>
+  
+  <div class="col-lg-11 mx-auto p-2 rounded-3 bg-white   d-flex  align-items-center flex-row justify-content-around col-10  mb-4"  >
+    <i class="fas fa-clock fs-5  bg text-white p-3 rounded-3"></i>
+    <div class="d-flex flex-column justify-content-center ">
+    <h3>3 <span class="">Mins</span></h3>
+    <p class="fw-light lh-1">Average Answer Time</p>
+</div>
+  
+</div>
+
+</div>              
                 </div>
             </div>
         </div>
@@ -426,13 +437,13 @@
                     <path d="M50 3L45 0.113249V5.88675L50 3ZM0 3.5H45.5V2.5H0V3.5Z"></path>
                 </svg>
             </p>
-            <h2 class="text-white col-lg-7 fs-4">
+            <p class="text-white col-lg-7 fs-6 fw-lighter text-end">
 
                 At AI-GRC-Software Development Solution, we specialize in creating secure and intelligent software
                 tailored to your business needs. Our solutions are designed to streamline operations, enhance
                 decision-making, and ensure compliance with advanced AI-driven technologies. Let us help you build a
                 smarter and safer future.
-            </h2>
+            </p>
         </div>
         <div class="container d-flex flex-lg-column flex-column py-5 gth">
             <div class="col-lg-12 col-md-6 d-flex flex-lg-row flex-column cardsss py-4 mb-2">
