--- a/AiProductSolution.html
+++ b/AiProductSolution.html
@@ -354,14 +354,14 @@
 
     <!-- MAIN 1 START -->
     <div
-        class="container-fluid d-flex flex-lg-row pt-5 mt-5 align-items-lg-center flex-column mt-lg-0 mt-5 justify-content-between">
+        class="container-fluid d-flex flex-lg-row pt-5 my-5 align-items-lg-center flex-column mt-lg-0 mt-5 justify-content-between">
         <div class="d-flex flex-lg-row flex-column align-items-lg-center ">
-            <h2 class="strk text-start position-relative ">
+            <h5 class="strk text-start position-relative ">
                 AI Powered <br> Solutions
                 <svg xmlns="http://www.w3.org/2000/svg" width="50" class="arr" height="6" viewBox="0 0 50 6">
                     <path d="M50 3L45 0.113249V5.88675L50 3ZM0 3.5H45.5V2.5H0V3.5Z"></path>
                 </svg></span>
-            </h2>
+            </h5>
 
 
         </div>
@@ -658,6 +658,64 @@
 
     </div>
     <!-- MAIN 3 END -->
+
+    <!-- MAIN 4 START -->
+    <div
+    class="container-fluid d-flex flex-lg-row pt-5 my-5 align-items-lg-center flex-column mt-lg-0 mt-5 justify-content-between">
+    <div class="d-flex flex-lg-row flex-column align-items-lg-center ">
+        <h3 class=" text-start position-relative ">
+            How We Do
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" class="arr" height="6" viewBox="0 0 50 6">
+                <path d="M50 3L45 0.113249V5.88675L50 3ZM0 3.5H45.5V2.5H0V3.5Z"></path>
+            </svg></span>
+        </h3>
+
+
+    </div>
+    <div class="d-flex  justify-content-end col-lg-4 mt-5 mt-lg-0">
+        <h5 class="text-end">Solutions leveraging AI to empower smarter decision-making and seamless automation.</h5>
+    </div>
+</div>
+<div class="mt-5 d-flex flex-lg-row flex-column text-start container-fluid px-lg-3 justify-content-between">
+    <!-- Collaborative Planning -->
+    <div class="col-lg-4 col-12 mb-4">
+      <i class="fas fa-handshake bg text-white p-2 rounded-2 fa-3x mb-3"></i>
+      <h4 class="fw-bold py-2">Collaborative Planning</h4>
+      <p class="fw-lighter">Streamline teamwork with Collaborative Planning, fostering efficiency and synergy in achieving shared goals seamlessly.</p>
+      <ul class="list-unstyled text-start fw-lighter">
+        <li><i class="fas fa-check col-org "></i> Sustainability and Responsibility</li>
+        <li><i class="fas fa-check col-org"></i> Customer-Centric Approach</li>
+        <li><i class="fas fa-check col-org"></i> Businesses can partner with affiliates</li>
+      </ul>
+   
+    </div>
+  
+    <!-- Customized Solutions -->
+    <div class="col-lg-4 col-12 mb-4">
+      <i class="fas fa-cogs bg text-white p-2 rounded-2 fa-3x mb-3"></i>
+      <h4 class="fw-bold py-2">Customized Solutions</h4>
+      <p class="fw-lighter">Tailored solutions for your unique needs, delivering personalized results that elevate your experience and expectation.</p>
+      <ul class="list-unstyled text-start fw-lighter">
+        <li><i class="fas fa-check col-org"></i> Sustainability and Responsibility</li>
+        <li><i class="fas fa-check col-org"></i> Customer-Centric Approach</li>
+        <li><i class="fas fa-check col-org"></i> Businesses can partner with affiliates</li>
+      </ul>
+    </div>
+  
+    <!-- Understanding Your Vision -->
+    <div class="col-lg-4 col-12 mb-4">
+      <i class="fas fa-brain bg text-white p-2 rounded-2 fa-3x mb-3"></i>
+      <h4 class="fw-bold py-2">Understanding Your Vision</h4>
+      <p class="fw-lighter">Tailored solutions for your unique needs, delivering personalized results that elevate your experience and expectation.</p>
+      <ul class="list-unstyled text-start fw-lighter">
+        <li><i class="fas fa-check col-org"></i> Sustainability and Responsibility</li>
+        <li><i class="fas fa-check col-org"></i> Customer-Centric Approach</li>
+        <li><i class="fas fa-check col-org"></i> Businesses can partner with affiliates</li>
+      </ul>
+    </div>
+  </div>
+  
+     <!-- MAIN4 END -->
     <div
         class="container-fluid d-flex flex-lg-row pt-5 mt-5 align-items-lg-center flex-column mt-lg-0 mt-5 justify-content-between">
         <div class="d-flex flex-lg-row flex-column align-items-lg-center ">
