--- a/about.html
+++ b/about.html
@@ -100,10 +100,9 @@ Windermere, Windermere, FL34786, USA
       </a>
 
       <!-- Toggler Button -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  <button class="btn btn-red navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
+  <i class="fa-solid fa-bars"></i>
+</button>
 
       <!-- Collapsible Navbar Content -->
       <div class="collapse sdsd navbar-collapse d-flex flex-row justify-content-end" id="navbarSupportedContent">
