--- a/index.html
+++ b/index.html
@@ -100,11 +100,9 @@ Windermere, Windermere, FL34786, USA
       </a>
 
       <!-- Toggler Button -->
-      <button class="btn btn-red navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight1"
-      aria-controls="offcanvasRight1">
-      <i class="fa-solid fa-bars"></i>
-    </button>
-
+<button class="btn btn-red navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
+  <i class="fa-solid fa-bars"></i>
+</button>
       <!-- Collapsible Navbar Content -->
       <div class="collapse sdsd navbar-collapse d-flex flex-row justify-content-end" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mt-2 mb-lg-0 d-lg-flex d-none">
@@ -252,11 +250,18 @@ Windermere, Windermere, FL34786, USA
             <span class="navhover"></span>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Service</a>
-            <span class="navhover"></span>
-
+            <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+              Service
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <li><a class="dropdown-item" href="AiProductSolution.html">AI Product Solution</a></li>
+              <li><a class="dropdown-item" href="GrcSolution.html">GRC Solutions</a></li>
+              <li><a class="dropdown-item" href="Web-AppDevelopment.html">Web & App Development</a></li>
+              <li><a class="dropdown-item" href="EcommerceSolution.html">Ecommerce Solutions</a></li>
+              <li><a class="dropdown-item" href="DigitalMarketing.html">Digital Marketing</a></li>
+            </ul>
           </li>
-
+          
           <li class="nav-item dropdown">
             <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
             <span class="navhover"></span>
@@ -487,7 +492,7 @@ Windermere, Windermere, FL34786, USA
             streamline operations, enhance decision-making, and drive innovation. Tailored solutions cater to diverse
             industries, ensuring optimal efficiency and scalability.</p>
           <div class="mx-auto col-12 d-flex flex-row  align-items-center">
-            <button class="mx-1 col-5 set-btn">Book Your Meeting
+            <button class="mx-1 col-5 set-btn">More-Info
               <span class="set-btn-hover d-flex flex-row align-items-center justify-content-center">
                 <a href="AiProductSolution.html" class="col-12">
 
