--- a/AiProductSolution.html
+++ b/AiProductSolution.html
@@ -500,9 +500,11 @@
                         <input type="text" class="form-control my-2 col-10" placeholder="Your Name" name="name" id="name">
                         <input type="email" class="form-control mb-2 col-10" placeholder="Your Email" name="email" id="email">
 
-<!-- <div class="col-12"> -->
+
                         <input id="phone" type="tel" class="mb-2 col-12">
-                    <!-- </div> -->
+                <div class="col-12 mt-2 d-flex flex-row justify-content-center align-items-center">
+<button class="bg text-white border-0 p-2 fs-6 col-6 mx-auto rounded-3 mt-3">Submit Now </button>
+                </div>
                     </div>
                 </div>
             </div>
@@ -536,7 +538,7 @@
                         </div>
                     </div>
                     <div
-                        class="col-lg-4 col-12 d-flex flex-row  justify-content-lg-end align-items-start mt-lg-0 mt-2   flex-row ">
+                        class="col-lg-4 col-12 d-flex flex-row justify-content-around  align-items-end  mt-lg-0 mt-2   flex-row ">
 
                         <button class="mx-lg-0 mx-auto col-lg-5 col-5 set-bt btn-explore  ">
                             More-Info
