--- a/AiProductSolution.html
+++ b/AiProductSolution.html
@@ -497,7 +497,7 @@
                     </button>
 
                     <div class="col-9 ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-5">
-                        <h3 class="text-white1 text-end mb-4">Fill This Form <br>For Inquiry</h3>
+                        <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
                         <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="name"
                             id="name">
                         <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="email"
@@ -508,7 +508,7 @@
                         <div class="col-12 text-center  mt-2">
                             <button type="submit"
                                 class="mt-3 mx-auto who text-white1 btn3 col-lg-6 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
-                                SEND NOW
+                                Submit
                                 <i class="fa-solid fa-paper-plane icon-hover"></i>
 
                             </button>
@@ -557,7 +557,7 @@
                     </button>
 
                     <div class="col-9 ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-5">
-                        <h3 class="text-white1 text-end mb-4">Fill This Form <br>For Inquiry</h3>
+                        <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
                         <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="name"
                             id="name">
                         <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="email"
@@ -568,7 +568,7 @@
                         <div class="col-12 text-center  mt-2">
                             <button type="submit"
                                 class="mt-3 mx-auto who text-white1 btn3 col-lg-6 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
-                                SEND NOW
+                                Submit
                                 <i class="fa-solid fa-paper-plane icon-hover"></i>
 
                             </button>
@@ -615,7 +615,7 @@
                     </button>
 
                     <div class="col-9 ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-5">
-                        <h3 class="text-white1 text-end mb-4">Fill This Form <br>For Inquiry</h3>
+                        <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
                         <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="name"
                             id="name">
                         <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="email"
@@ -626,7 +626,7 @@
                         <div class="col-12 text-center  mt-2">
                             <button type="submit"
                                 class="mt-3 mx-auto who text-white1 btn3 col-lg-6 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
-                                SEND NOW
+                                Submit
                                 <i class="fa-solid fa-paper-plane icon-hover"></i>
 
                             </button>
@@ -646,7 +646,7 @@
                     </button>
 
                     <div class="col-9 ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-5">
-                        <h3 class="text-white1 text-end mb-4">Fill This Form <br>For Inquiry</h3>
+                        <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
                         <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="name"
                             id="name">
                         <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="email"
@@ -657,7 +657,7 @@
                         <div class="col-12 text-center  mt-2">
                             <button type="submit"
                                 class="mt-3 mx-auto who text-white1 btn3 col-lg-6 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
-                                SEND NOW
+                                Submit
                                 <i class="fa-solid fa-paper-plane icon-hover"></i>
 
                             </button>
@@ -701,7 +701,7 @@
                     </button>
 
                     <div class="col-9 ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-5">
-                        <h3 class="text-white1 text-end mb-4">Fill This Form <br>For Inquiry</h3>
+                        <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
                         <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="name"
                             id="name">
                         <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="email"
@@ -712,7 +712,7 @@
                         <div class="col-12 text-center  mt-2">
                             <button type="submit"
                                 class="mt-3 mx-auto who text-white1 btn3 col-lg-6 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
-                                SEND NOW
+                                Submit
                                 <i class="fa-solid fa-paper-plane icon-hover"></i>
 
                             </button>
@@ -732,7 +732,7 @@
                     </button>
 
                     <div class="col-9 ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-5">
-                        <h3 class="text-white1 text-end mb-4">Fill This Form <br>For Inquiry</h3>
+                        <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
                         <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="name"
                             id="name">
                         <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="email"
@@ -743,7 +743,7 @@
                         <div class="col-12 text-center  mt-2">
                             <button type="submit"
                                 class="mt-3 mx-auto who text-white1 btn3 col-lg-6 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
-                                SEND NOW
+                                Submit
                                 <i class="fa-solid fa-paper-plane icon-hover"></i>
 
                             </button>
