--- a/AiProductSolution.html
+++ b/AiProductSolution.html
@@ -446,7 +446,7 @@
 
     <div class="container-fluid mt-5 py-5 who d-flex flex-column justify-content-center align-items-center">
         <div class="container d-flex flex-lg-row flex-column py-5">
-            <p class="pe-5 fs-4 text-white col-lg-5">Our Services<svg xmlns="http://www.w3.org/2000/svg" width="50"
+            <p class="pe-5 fs-4 text-white col-lg-5">Our AI Products<svg xmlns="http://www.w3.org/2000/svg" width="50"
                     class="arr" height="6" viewBox="0 0 50 6">
                     <path d="M50 3L45 0.113249V5.88675L50 3ZM0 3.5H45.5V2.5H0V3.5Z"></path>
                 </svg>
@@ -1025,7 +1025,7 @@
 
 inputs.forEach(input => {
     window.intlTelInput(input, {
-        initialCountry: "gb",
+        initialCountry: "us",
         separateDialCode: true,
         utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/utils.js", // For formatting
     });
