--- a/buoylight.html
+++ b/buoylight.html
@@ -29,7 +29,7 @@
       background-repeat: no-repeat;
       /* object-fit: cover; */
       background-position: center !important;
-    background-image: url("Assets/Banner-Image/banner-img-10.png");
+    background-image: url("Assets/Banner-Image/banner-img-11.png");
     }
   </style>
 </head>
@@ -253,8 +253,7 @@
 </div>
   <!-- OFFCANVAS -->
   <!-- CONTACT-US -->
-  <div class="container-fluid home d-flex flex-column align-items-center justify-content-center  h20 pb-0"
-    id="home">
+  <div class="container-fluid home d-flex flex-column align-items-center justify-content-center  h20 pb-0">
     <h2 class="text-white mb-3 display-2 fw-bold">BuoyLIGHT<sup
         class="col-org">TM</sup>  </h2>
  <h4 class="text-white  ">Home / BuoyLIGHT </h4>
