--- a/getqoutes.html
+++ b/getqoutes.html
@@ -8,7 +8,7 @@
     <!-- FONT AWEOSEOM -->
   
     <!-- EXTERNEL CSS FILE -->
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <!-- EXTERNEL CSS FILE -->
   
     <!-- Bootstrap CSS -->
